--- a/src/components/MemoTest/Card/Card.css
+++ b/src/components/MemoTest/Card/Card.css
@@ -6,3 +6,26 @@
 .card:hover:enabled {
     transform: scale(1.05);
 }
+
+.flip-card {
+    background-color: transparent;
+}
+
+.flip-card-inner {
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flipped {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-back {
+    transform: rotateY(180deg);
+}
